{
  "version": 4,
  "terraform_version": "1.15.9",
  "serial": 19,
  "lineage": "5f59a26b-81ef-bb88-c3ad-2c8c77fa36b0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "coderco_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:959740417357:internet-gateway/igw-01c466b92e19f4c6a",
            "id": "igw-01c466b92e19f4c6a",
            "owner_id": "959740417357",
            "region": "us-east-1",
            "tags": {
              "Name": "wordpress_igw"
            },
            "tags_all": {
              "Name": "wordpress_igw"
            },
            "vpc_id": "vpc-0c66bcda00d9dfe69"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "959740417357",
            "id": "igw-01c466b92e19f4c6a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc_aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws_routeTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:959740417357:route-table/rtb-0ab8aa9e2fd3e68d6",
            "id": "rtb-0ab8aa9e2fd3e68d6",
            "owner_id": "959740417357",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c466b92e19f4c6a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordpress_routeTable"
            },
            "tags_all": {
              "Name": "wordpress_routeTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c66bcda00d9dfe69"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "959740417357",
            "id": "rtb-0ab8aa9e2fd3e68d6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.coderco_gw",
            "aws_vpc.vpc_aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de11e5662ac60b53",
            "region": "us-east-1",
            "route_table_id": "rtb-0ab8aa9e2fd3e68d6",
            "subnet_id": "subnet-02bdca0897a1857b5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "959740417357",
            "id": "rtbassoc-0de11e5662ac60b53",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.coderco_gw",
            "aws_route_table.aws_routeTable",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:959740417357:security-group/sg-001248c8d174d4cf1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-001248c8d174d4cf1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wordpress_sg_rules",
            "name_prefix": "",
            "owner_id": "959740417357",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c66bcda00d9dfe69"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "959740417357",
            "id": "sg-001248c8d174d4cf1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc_aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:959740417357:subnet/subnet-02bdca0897a1857b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02bdca0897a1857b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "959740417357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-0c66bcda00d9dfe69"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "959740417357",
            "id": "subnet-02bdca0897a1857b5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc_aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:959740417357:vpc/vpc-0c66bcda00d9dfe69",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07fa6a859a3975a79",
            "default_route_table_id": "rtb-0c1fd247bbb26a2c5",
            "default_security_group_id": "sg-0e81e2794808d0bb7",
            "dhcp_options_id": "dopt-0fec7abfed574106a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c66bcda00d9dfe69",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c1fd247bbb26a2c5",
            "owner_id": "959740417357",
            "region": "us-east-1",
            "tags": {
              "Name": "wordpress_vpc"
            },
            "tags_all": {
              "Name": "wordpress_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "959740417357",
            "id": "vpc-0c66bcda00d9dfe69",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "wordpress_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:959740417357:security-group-rule/sgr-0ca9870b6644ed0b3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ca9870b6644ed0b3",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-001248c8d174d4cf1",
            "security_group_rule_id": "sgr-0ca9870b6644ed0b3",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "959740417357",
            "id": "sgr-0ca9870b6644ed0b3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sg_rules",
            "aws_vpc.vpc_aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "wordpress_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:959740417357:security-group-rule/sgr-034d831605bce8f88",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-034d831605bce8f88",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-001248c8d174d4cf1",
            "security_group_rule_id": "sgr-034d831605bce8f88",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "959740417357",
            "id": "sgr-034d831605bce8f88",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sg_rules",
            "aws_vpc.vpc_aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "wordpress_ssh_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:959740417357:security-group-rule/sgr-04999d1e4815d835c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-04999d1e4815d835c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-001248c8d174d4cf1",
            "security_group_rule_id": "sgr-04999d1e4815d835c",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "959740417357",
            "id": "sgr-04999d1e4815d835c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sg_rules",
            "aws_vpc.vpc_aws"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fe74bfcad4fd6bd2",
            "arn": "arn:aws:ec2:us-east-1:959740417357:instance/i-062baf28856d169fd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-062baf28856d169fd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06e2985d5e56344ac"
              }
            ],
            "primary_network_interface_id": "eni-06e2985d5e56344ac",
            "private_dns": "ip-10-0-1-178.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.178",
            "public_ip": "100.52.195.73",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0177c8974245378ea",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02bdca0897a1857b5",
            "tags": {
              "Name": "wordpress_ec2"
            },
            "tags_all": {
              "Name": "wordpress_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-001248c8d174d4cf1"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "959740417357",
            "id": "i-062baf28856d169fd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sg_rules",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_aws"
          ]
        }
      ]
    }
  ]
}